basic markup created

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <title>trillo &mdash; Your all-in-one booking app</title>
   </head>
   <body>
-    Trilo
+    <div class="container">
+      <header class="header">Header goes here</header>
+      <div class="content">
+        <nav class="sidebar">Navigation</nav>
+        <main class="hotel-view">Hotel View</main>
+      </div>
+    </div>
   </body>
 </html>
