basic formatting done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,47 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">Header goes here</header>
+      <header class="header">
+        <img src="img/logo.png" alt="trillo logo" class="logo" />
+        <form action="#" class="search">
+          <input
+            type="search"
+            class="search__input"
+            placeholder="Search hotels"
+          />
+          <button class="search__button">
+            <svg class="search__icon">
+              <use xlink:href="img/sprite.svg#icon-magnifying-glass" />
+            </svg>
+          </button>
+        </form>
+        <nav class="user-nav">
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-bookmark" />
+            </svg>
+            <span class="user-nav__notification"> 7 </span>
+          </div>
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-chat" />
+            </svg>
+            <span class="user-nav__notification"> 2 </span>
+          </div>
+          <div class="user-nav__user">
+            <img src="img/user.jpg" alt="user" class="user-nav__user-photo" />
+            <span class="user-nav__user-name">Jonas</span>
+          </div>
+        </nav>
+
+        <!-- </nav> -->
+        <!-- <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-line-graph" />
+            </svg>
+          </div> -->
+        <!-- </nav> -->
+      </header>
       <div class="content">
         <nav class="sidebar">Navigation</nav>
         <main class="hotel-view">Hotel View</main>
